# Course_work_1

./: .env_example  .gitignore  README.md  pyproject.toml  user_settings.json
data/: user_settings.json
data/cache/: currency_rates.json  stocks_rates.json
data/reports/: report_spending_by_category_20260606.json  report_spending_by_weekday_20260606.json  report_spending_by_workday_20260606.json
src/: decorators.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
